fix: update hover styles

--- a/resources/explorer/explorer.css
+++ b/resources/explorer/explorer.css
@@ -346,22 +346,26 @@ li.codeflowselected:focus {
 }
 
 #resultslisttable thead th {
-  background: var(--layer2);
+  background-color: var(--layer2);
   padding: 5px;
 }
 
 #resultslisttable tbody th {
-  background: var(--layer2);
+  background-color: var(--layer2);
   padding: 5px;
   padding-left: 5px !important;
 }
 
-#resultslisttable tbody tr:hover {
-  background: var(--layer4);
+#resultslisttable tbody tr:hover td {
+  background-color: var(--layer4);
+}
+
+#resultslisttable tbody tr.expanded th {
+  background-color: var(--layer5);
 }
 
 #resultslisttable tbody td {
-  background: var(--layer3);
+  background-color: var(--layer3);
   padding: 2px !important;
   min-height: 10px;
 }
@@ -371,31 +375,13 @@ li.codeflowselected:focus {
 }
 
 #resultslisttablecontainer {
-  background: var(--layer2);
+  background-color: var(--layer2);
   padding: 5px;
 }
 
 #resultslisttable {
-  background: var(--layer2);
-}
-
-#resultslisttable thead th {
-  background: var(--layer3);
-  padding: 5px;
-}
-
-#resultslisttable tbody th {
-  background: var(--layer3);
-  padding: 5px;
-  padding-left: 5px !important;
-}
-
-#resultslisttable tbody td {
-  background: var(--layer4);
-}
-
-#resultslisttable .listtablegroup.collapsed > th::before {
-  margin-right: 5px;
+  background-color: var(--layer2);
+  margin-right: 15px;
 }
 
 #shiftleft-scan-docs {
