--- a/resources/explorer/explorer.css
+++ b/resources/explorer/explorer.css
@@ -8,14 +8,14 @@
   outline: unset;
 }
 :root {
-  --layer0: #1c1c25;
-  --layer1: #23212e;
-  --layer2: #312e3b;
-  --layer3: #4b4953;
-  --layer4: #5c5b64;
-  --layer5: #6c6b73;
-  --btn-background: #8d57d9;
-  --btn-focus-background: #c194ff;
+  --layer0: hsla(15, 94%, 7%, 1);
+  --layer1: hsla(10, 85%, 21%, 1);
+  --layer2: hsla(7, 85%, 31%, 1);
+  --layer3: hsla(16, 92%, 38%, 1);
+  --layer4: hsla(39, 92%, 54%, 1);
+  --layer5: hsla(39, 92%, 54%, 1);
+  --btn-background: hsla(15, 94%, 7%, 1);
+  --btn-focus-background: hsla(16, 92%, 38%, 1);
 }
 
 body {
@@ -26,14 +26,12 @@ body {
   overflow-x: hidden;
   overflow-y: scroll;
   padding: 0px;
-  background-color: var(--layer0);
+  background-color: var(--vscode-editor-background);
   color: #ffffff;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
 body.shiftleft-scan header.navbar {
-  background-color: #23212e;
+  background-color: var(--layer1);
   padding: 5px;
 }
 
@@ -54,16 +52,18 @@ header.navbar .navbar-brand {
 .headercontainer {
   padding: 10px;
   font-size: 16px;
-  background-color: var(--layer1);
+  background-color: var(--vscode-editor-background);
+  color: var(--vscode-editor-foreground);
   width: 100%;
 }
 
 .headercontainer > label:first-child::before {
   font-size: 18px;
   padding-top: 2px;
-  margin-right: 5px;
+  margin-right: 0px;
   font-weight: normal;
-  color: #ffffff;
+  background-color: var(--vscode-editor-background);
+  color: var(--vscode-editor-foreground);
 }
 
 .headercontainer.expanded > label:first-child::before {
@@ -99,7 +99,7 @@ li.expanded::before,
 }
 
 .headercontentseperator {
-  color: #5725e1;
+  color: var(--layer3);
   font-size: 150%;
   padding: 0px 9px;
 }
@@ -111,7 +111,8 @@ li.expanded::before,
 }
 
 #titleruleid {
-  color: #3ecf8e;
+  color: var(--layer1);
+  background-color: #ffffff;
 }
 
 #result-details {
@@ -123,7 +124,7 @@ li.expanded::before,
   display: flex;
   flex-flow: column nowrap;
   flex: 1 1 50vh;
-  background-color: #1c253e;
+  background-color: var(--layer5);
   font-size: 12px;
   padding-bottom: 20px;
 }
@@ -135,7 +136,7 @@ div#resultdetailscontainer:empty {
 #resultdescription {
   flex: 0 0 auto;
   max-height: 40%;
-  overflow-x: hidden;
+  overflow-x: scroll;
   overflow-wrap: break-word;
   padding: 2px 10px;
 }
@@ -147,21 +148,21 @@ div#resultdetailscontainer:empty {
 }
 
 .tab {
-  color: #ffffff;
+  color: var(--layer2);
   padding: 5px 7px;
   user-select: none;
   white-space: nowrap;
 }
 
 .tab:hover {
-  color: #3ecf8e;
+  color: var(--layer3);
 }
 
 .tabactive > .tablabel {
-  border-bottom-color: #3ecf8e;
+  border-bottom-color: var(--layer0);
   border-bottom-style: solid;
   border-bottom-width: 1px;
-  color: #ffffff;
+  color: #000000;
   padding-bottom: 2px;
 }
 
@@ -187,7 +188,7 @@ div#resultdetailscontainer:empty {
 
 .tabcontentheader {
   background-color: var(--vscode-sideBarSectionHeader-background);
-  border-bottom-color: #5725e1;
+  border-bottom-color: var(--layer0);
   border-bottom-style: solid;
   border-bottom-width: thin;
   display: flex;
@@ -293,16 +294,16 @@ li.verbosityhide {
 }
 
 li:hover {
-  background: #3ecf8e;
+  background: var(--layer4);
 }
 
 li.codeflowselected {
-  background: #5725e1;
+  background: var(--layer3);
   color: #ffffff;
 }
 
 li.codeflowselected:focus {
-  background: #5725e1;
+  background: var(--layer3);
   color: #ffffff;
 }
 
@@ -328,11 +329,12 @@ li.codeflowselected:focus {
 #scanRunning,
 .empty,
 .card {
-  background: #23212e;
+  background: var(--layer1);
   color: #ffffff;
 }
 
 #scanBtn {
+  margin: 10px 10px;
   background-color: var(--btn-background);
   color: #ffffff;
   border-radius: 4px;
@@ -355,59 +357,79 @@ li.codeflowselected:focus {
 }
 
 #results {
-  padding: 5px 0;
+  padding: 0px 0;
 }
 
 #resultslisttablecontainer {
-  padding: 5px 0;
+  padding: 0px 0;
 }
 
 #resultslisttable {
-  background: var(--layer1);
+  color: var(--layer1);
+  background: #ffffff;
 }
 
 #resultslisttable thead th {
-  background-color: var(--layer2);
-  padding: 5px;
+  background-color: var(--vscode-editor-background);
+  color: var(--vscode-editor-foreground);
+  padding: 10px;
 }
 
 #resultslisttable tbody th {
-  background-color: var(--layer2);
-  padding: 5px;
-  padding-left: 5px !important;
+  color: var(--layer0);
+  background: #ffffff;
+  padding: 10px;
+  padding-left: 10px !important;
 }
 
-#resultslisttable tbody tr:hover td,
+#resultslisttable tbody tr:hover td {
+  background-color: var(--layer0);
+  color: #ffffff;
+}
 #resultslisttable tbody tr.selected td {
-  background-color: #1c253e;
+  background-color: var(--layer5);
+  color: #000000;
 }
 
 #resultslisttable tbody tr#temp-row td {
-  background-color: #1c253e;
+  background-color: var(--layer5);
+  color: #000000;
+}
+
+#resultslisttable tbody tr#temp-row a {
+  color: var(--layer2);
+}
+
+#resultslisttable tbody tr#temp-row a:hover {
+  color: var(--layer3);
 }
 
 #resultslisttable tbody tr.expanded th {
-  background-color: var(--layer5);
+  background-color: var(--layer1);
+  color: #ffffff;
 }
 
 #resultslisttable tbody td {
-  background-color: var(--layer3);
+  background-color: var(--vscode-editor-background);
+  color: var(--vscode-editor-foreground);
   padding: 2px !important;
   min-height: 10px;
 }
 
 #resultslisttable .listtablegroup.collapsed > th::before {
-  margin-right: 5px;
+  margin-right: -10px;
 }
 
 #resultslisttablecontainer {
-  background-color: var(--layer2);
-  padding: 5px;
+  background-color: var(--vscode-editor-background);
+  color: var(--vscode-editor-foreground);
+  padding: 0px;
 }
 
 #resultslisttable {
-  background-color: var(--layer2);
-  margin-right: 15px;
+  background-color: var(--vscode-editor-background);
+  color: var(--vscode-editor-foreground);
+  margin-right: -10px;
 }
 
 #shiftleft-scan-docs {
@@ -420,7 +442,7 @@ a {
 }
 
 a:hover {
-  color: #3ecf8e;
+  color: var(--layer3);
 }
 #tabcontainer > .tab {
   border-bottom: none;
